Excluded files from production build

--- a/composer.json
+++ b/composer.json
@@ -15,8 +15,12 @@
     },
     "autoload": {
     	"psr-4": {
-    		"Joomla\\Language\\": "src/",
-            "Joomla\\Language\\Tests\\": "Tests/"
+    		"Joomla\\Language\\": "src/"
     	}
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "Joomla\\Language\\Tests\\": "Tests/"
+        }
     }
 }
