--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
         "symfony/deprecation-contracts": "^2.1"
     },
     "require-dev": {
-        "joomla/coding-standards": "^2.0@alpha",
+        "joomla/coding-standards": "^3.0@dev",
         "joomla/di": "^1.0|^2.0",
         "joomla/registry": "^1.4.5|^2.0",
         "joomla/test": "^2.0",
