--- a/composer.json
+++ b/composer.json
@@ -12,11 +12,11 @@
         "symfony/deprecation-contracts": "^2.1"
     },
     "require-dev": {
-        "joomla/coding-standards": "^3.0@dev",
         "joomla/di": "^2.0",
         "joomla/registry": "^2.0",
         "joomla/test": "^2.0",
-        "phpunit/phpunit": "^8.5|^9.0"
+        "phpunit/phpunit": "^8.5|^9.0",
+        "squizlabs/php_codesniffer": "~3.7.1"
     },
     "suggest": {
         "joomla/di": "To use the Language ServiceProviderInterface objects, install joomla/di."
