--- a/composer.json
+++ b/composer.json
@@ -8,13 +8,13 @@
     "require": {
         "php": "~8.1.0",
         "ext-xml": "*",
-        "joomla/string": "^2.0",
+        "joomla/string": "3.0.x-dev",
         "symfony/deprecation-contracts": "^2.1"
     },
     "require-dev": {
-        "joomla/di": "^2.0",
-        "joomla/registry": "^2.0",
-        "joomla/test": "^2.0",
+        "joomla/di": "3.0.x-dev",
+        "joomla/registry": "3.0.x-dev",
+        "joomla/test": "3.0.x-dev",
         "phpunit/phpunit": "^8.5|^9.0",
         "squizlabs/php_codesniffer": "~3.7.1"
     },
