--- a/composer.json
+++ b/composer.json
@@ -6,17 +6,19 @@
     "homepage": "https://github.com/joomla-framework/language",
     "license": "GPL-2.0-or-later",
     "require": {
-        "php": "~8.1.0",
+        "php": "^8.1.0",
         "ext-xml": "*",
         "joomla/string": "3.0.x-dev",
-        "symfony/deprecation-contracts": "^2.1"
+        "symfony/deprecation-contracts": "^2.5"
     },
     "require-dev": {
         "joomla/di": "3.0.x-dev",
         "joomla/registry": "3.0.x-dev",
         "joomla/test": "3.0.x-dev",
         "phpunit/phpunit": "^9.5.28",
-        "squizlabs/php_codesniffer": "~3.7.1"
+        "squizlabs/php_codesniffer": "^3.7.2",
+        "phpstan/phpstan": "^1.10.7",
+        "phan/phan": "^5.4.2"
     },
     "suggest": {
         "joomla/di": "To use the Language ServiceProviderInterface objects, install joomla/di."
