--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
         "php": "^8.1.0",
         "ext-xml": "*",
         "joomla/string": "3.0.x-dev",
-        "symfony/deprecation-contracts": "^2.5"
+        "symfony/deprecation-contracts": "^2|^3"
     },
     "require-dev": {
         "joomla/di": "3.0.x-dev",
