--- a/composer.json
+++ b/composer.json
@@ -8,13 +8,13 @@
     "require": {
         "php": "^8.1.0",
         "ext-xml": "*",
-        "joomla/string": "3.0.x-dev",
+        "joomla/string": "^3.0",
         "symfony/deprecation-contracts": "^2|^3"
     },
     "require-dev": {
-        "joomla/di": "3.0.x-dev",
-        "joomla/registry": "3.0.x-dev",
-        "joomla/test": "3.0.x-dev",
+        "joomla/di": "^3.0",
+        "joomla/registry": "^3.0",
+        "joomla/test": "^3.0",
         "phpunit/phpunit": "^9.5.28",
         "squizlabs/php_codesniffer": "^3.7.2",
         "phpstan/phpstan": "^1.10.7",
